plugins {
    id 'java'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    maven {
        url = 'https://repo.spring.io/plugins-release/'
    }
    maven {
        url = 'https://repo.maven.apache.org/maven2'
    }
}

dependencies {
    compile('org.archive:heritrix:1.14.2-webcuratortool-2.0.1') {
        exclude group: 'javax.servlet', module: 'servlet-api'
        exclude group: 'commons-pool', module: 'commons-pool'
    }
    compile 'commons-codec:commons-codec:1.3'
    compile 'commons-collections:commons-collections:3.1'
    compile 'commons-httpclient:commons-httpclient:3.1.1-heritrix-1.14.2-webcuratortool-2.0.1'
    compile 'commons-io:commons-io:1.3.1'
    compile 'commons-lang:commons-lang:2.3'
    compile 'org.drools:drools-compiler:7.15.0.Final'
    compile 'org.drools:drools-core:7.15.0.Final'
    compile 'com.ibm:ibmjsse:1.0'
    compile 'com.google.guava:guava:14.0.1'
    compile 'net.sf:jargs:1.0'
    compile 'com.sleepycat:je:3.3.74'
    compile 'javax.mail:mail:1.4.7'
    compile 'mysql:mysql-connector-java:5.1.6'
    compile 'oro:oro:2.0.8'
    compile 'org.quartz-scheduler:quartz:2.3.1'
    compile 'smalltext-0.1.4:smalltext-0.1.4:0.1.4'
    compile 'org.springframework:spring-context-support:5.1.8.RELEASE'
    compile 'org.springframework.security:spring-security-ldap:5.1.6.RELEASE'
    compile 'org.springframework.retry:spring-retry:1.2.4.RELEASE'
    compile 'org.springframework.boot:spring-boot-starter-web:2.1.7.RELEASE'
    compile 'org.springframework.boot:spring-boot-starter-security:2.1.7.RELEASE'
    compile 'org.springframework.boot:spring-boot-starter-data-jpa:2.1.7.RELEASE'
    compile 'org.springframework.boot:spring-boot-starter-webflux:2.1.7.RELEASE'
    testCompile 'junit:junit:4.12'
    testCompile 'org.mockito:mockito-core:3.2.4'
    testCompile 'org.powermock:powermock-module-junit4:1.5.1'
    testCompile 'org.springframework.boot:spring-boot-starter-test:2.1.7.RELEASE'
    compileOnly 'javax.servlet.jsp:jsp-api:2.0'
    compileOnly 'javax.servlet:javax.servlet-api:3.1.0'
}

group = 'org.webcurator'
version = '3.0.0-SNAPSHOT'
description = 'Web Curator Tool Core'
sourceCompatibility = '1.8'
targetCompatibility = '1.8'

task sourcesJar(type: Jar) {
    classifier = 'sources'
    from(sourceSets.main.allJava)
}

task testsJar(type: Jar) {
    classifier = 'tests'
    from(sourceSets.test.output)
}

// just an alias
task install(dependsOn: ['build', 'publishToMavenLocal'])

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
            artifact(sourcesJar)
            artifact(testsJar)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs.add('-Xlint:all')
//    options.compilerArgs << "-Xlint:deprecation"
}
